--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="error_404">Error 404</string>
     <string name="mins">mins</string>
     <string name="video_thumbnail">Video Thumbnail</string>
+    <string name="bookmarks">Bookmarks</string>
 </resources>
