--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="mins">mins</string>
     <string name="video_thumbnail">Video Thumbnail</string>
     <string name="bookmarks">Bookmarks</string>
+    <string name="upcoming">Upcoming</string>
 </resources>
